<resources>
    <string name="server_client_id">188221629259-675olt1lscjefjkllj14cuo801r5eoqv.apps.googleusercontent.com</string>

    <string name="app_name">PlotPals</string>
    <string name="app_entry_description">Please sign in to continue</string>

    <string name="temporary_homepage_label">Temporary Homepage</string>

    <string name="create_profile_title">Create Profile</string>
    <string name="create_profile_description">Set up your PlotPals profile by adding your display name. Your display name can be changed later.</string>
    <string name="create_profile_google_login_name_description">Logged in as:</string>
    <string name="create_profile_display_name_text_input_hint">Enter Display Name</string>

    <string name="account_name_placeholder">Name</string>
    <string name="navbar_garden_text">My Gardens</string>
    <string name="navbar_home_text">Home</string>
    <string name="navbar_account_text">Account</string>
    <string name="header_account_main">My Account</string>

    <string name="account_apply">Apply to create new garden</string>
    <string name="account_apply2">Apply to add a new garden to Plotpal\'s in-app garden management system by filling out this form.</string>
    <string name="account_rating_placeholder">0.00</string>
    <string name="account_profile">Profile</string>
    <string name="account_roles">Roles</string>
    <string name="account_rating_text">Rating</string>
    <string name="account_admin_mode">Access Admin Pages</string>
    <string name="account_logout">Logout</string>

    <string name="homepage_title_placeholder">Good Morning,</string>
    <string name="homepage_tasks_title">My Tasks</string>
    <string name="good_morning_text">Good Morning,</string>
    <string name="good_afternoon_text">Good Afternoon,</string>
    <string name="good_evening_text">Good Evening,</string>
    <string name="good_night_text">Go to Sleep,</string>

    <string name="admin_homepage_title">Admin Mode</string>
    <string name="admin_homepage_garden_applications_title">Garden Applications</string>

    <string name="tasks_title">Tasks</string>

    <string name="gardenApplications_title">Garden Applications</string>

    <string name="single_garden_application_title_placeholder">Application []</string>
    <string name="single_garden_application_submitted_by_text">Submitted by: </string>
    <string name="single_garden_application_garden_name_title">Garden Name</string>
    <string name="single_garden_application_garden_address_title">Garden Address</string>
    <string name="single_garden_application_number_of_plots_title">Number of Plots</string>
    <string name="single_garden_application_contact_information_title">Contact Information</string>
    <string name="single_garden_application_approved_title">Approve</string>


    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_button_caption">Find a Garden</string>
    <string name="garden_name">Garden Name</string>
    <string name="address">Address</string>
    <string name="something_r">1234 Something Rd, Richmond, BC - V7E 1R4</string>
    <string name="contact_inf">Contact Info</string>
    <string name="contact_nam">Contact Name</string>
    <string name="some_id">123-456-7890</string>
    <string name="name_email_">name@email.com</string>
    <string name="view_forum_">View Forum Board</string>
    <string name="more_info_j">More Info/Join</string>
    <string name="search_for_">Search for a Garden</string>
    <string name="view_on_the">View on the map</string>
    <string name="title_activity_garden_info_non_member">GardenInfoNonMemberActivity</string>
    <string name="general_inf">General Information</string>
    <string name="additional_">Additional Information</string>
    <string name="forum_board">Forum Board</string>
    <string name="join">Join</string>
    <string name="my_membersh">My Membership</string>
    <string name="my_plot_">My plot:</string>
    <string name="my_role_s_">My role(s):</string>
    <string name="plot">N/A</string>
    <string name="plot_owner">Plot Owner</string>
    <string name="caretaker">Caretaker</string>
    <string name="my_tasks">My Tasks</string>
    <string name="header_my_garden">My Gardens</string>
    <string name="my_garden_no_garden_text">You are not part of a garden yet. Join one to get started!</string>
    <string name="manage_garden_text">Manage Garden</string>
    <string name="garden_members_text">Garden Members</string>
    <string name="edit_garden_text">Edit Garden</string>
    <string name="garden_name_body">Garden Name:</string>
    <string name="garden_address_body">Garden Address:</string>
    <string name="plot_number_body">Number of Garden Plots:</string>
    <string name="contact_info_body">Contact Info:</string>
    <string name="roles_title">Roles</string>

    <string name="current_members_no_plotowners_text">There are currently no Plot Owners in this garden</string>
    <string name="current_members_no_caretakers_text">There are currently no Caretakers in this garden</string>

    <string name="garden_application_header">New Garden Application</string>
    <string name="garden_application_instruction">First, please provide us with some information about your new garden. This can be changed
        at a later time if your application is approved.</string>

    <string name="garden_application_input_name">Garden Name</string>
    <string name="garden_application_input_address">Garden Address</string>
    <string name="garden_application_input_plots">Number of Garden Plots</string>
    <string name="garden_application_input_contact">Contact Information</string>
    <string name="garden_application_placeholder">Placeholder</string>

    <string name="garden_application_confirm_header">Confirm Application</string>

</resources>